--- a/ShoppingProject/MainWindow.xaml
+++ b/ShoppingProject/MainWindow.xaml
@@ -128,6 +128,20 @@
 
     </Grid>-->
     <Window.Resources>
+        <Style x:Key="listviewlabelkey" TargetType="Label">
+            <Setter Property="FontSize" Value="20"> </Setter>
+            <Setter Property="FontWeight" Value="Medium"></Setter>
+            <Setter Property="FontFamily" Value="Yu Gothic UI Semibold"></Setter>
+            <Setter Property="FontStretch" Value="Medium"></Setter>
+           
+        </Style>
+        <Style x:Key="listviewtextblockkey" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="20"></Setter>
+            <Setter Property="FontWeight" Value="Medium"></Setter>
+            <Setter Property="FontFamily" Value="Yu Gothic UI Semibold"></Setter>
+            <Setter Property="FontStretch" Value="Medium"></Setter>
+
+        </Style>
         <Style x:Key="generictextblockstyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="15"></Setter>
             <Setter Property="FontStyle" Value="Normal"></Setter>
@@ -264,20 +278,20 @@
                         <StackPanel Orientation="Horizontal">
                             <StackPanel Orientation="Vertical">
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Green" >CUSTOMER ID :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Customer_Id ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Green" >CUSTOMER ID :</Label>
+                                    <TextBlock Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Customer_Id ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Green">CUSTOMER NAME :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Customer_Name ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Green">CUSTOMER NAME :</Label>
+                                    <TextBlock  Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Customer_Name ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Green">CUSTOMER CREDIT :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Customer_Credit ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Green">CUSTOMER CREDIT :</Label>
+                                    <TextBlock  Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Customer_Credit ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Green">CUSTOMER DEBIT :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Customer_Debit ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Green">CUSTOMER DEBIT :</Label>
+                                    <TextBlock  Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Customer_Debit ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
 
@@ -296,20 +310,20 @@
                         <StackPanel Orientation="Horizontal">
                             <StackPanel Orientation="Vertical">
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Orange">PRODUCT ID :</Label>
-                                    <TextBlock  VerticalAlignment="Center" Text="{Binding Product_Id ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}"  Foreground="Orange">PRODUCT ID :</Label>
+                                    <TextBlock   Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Product_Id ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Orange">PRODUCT NAME :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Product_Name ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Orange">PRODUCT NAME :</Label>
+                                    <TextBlock  Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Product_Name ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Orange">PRODUCT PRICE :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Product_Price ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Orange">PRODUCT PRICE :</Label>
+                                    <TextBlock   Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Product_Price ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Orange">PRODUCT QUANTITY :</Label>
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Product_Qty ,Mode=OneWay}"></TextBlock>
+                                    <Label Style="{DynamicResource listviewlabelkey}" Foreground="Orange">PRODUCT QUANTITY :</Label>
+                                    <TextBlock  Style="{DynamicResource listviewtextblockkey}" VerticalAlignment="Center" Text="{Binding Product_Qty ,Mode=OneWay}"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
 
